--- a/main.css
+++ b/main.css
@@ -186,14 +186,11 @@ Color ratios are meeting WCAG recommandations: color ratios are all > 4.5:1. (fo
 		justify-content: flex-start;
 	}
 	.section_thread {
-		width: 90%;
+		width: 80%;
 		height: 2px;
 		border: 2px solid #0D5B77;
 		margin-top: 10px;
 		align-self: center;
-	}
-	#experiences > .section_thread {
-		margin-top: 30px;
 	}
 	.section_content_p {
 		width: 100%;
@@ -387,17 +384,14 @@ Color ratios are meeting WCAG recommandations: color ratios are all > 4.5:1. (fo
 		width: 80%;
 		height: 1px;
 		margin-left: 60px;
-		margin-bottom: 10px;
+		
 	}
-	#experiences > .section_thread {	
-		transform: translateY(-30px);
-	}
+
 	.section_content_p {
 		width: 100%;
 		height: 180px;
-		padding-top: 0;
+		padding-top: 40px;
 		flex-direction: row;
-
 	}
 	.section_content_p_left {
 		width: 30%;
@@ -405,17 +399,14 @@ Color ratios are meeting WCAG recommandations: color ratios are all > 4.5:1. (fo
 		margin-top: 0;
 		font-weight: bold;
 		align-self: flex-start;
-		
 	}	
 	.section_content_p_right {
-		width: 60%;
+		width: 50%;
 		height: 200px;
 		padding-left: 10px;
 		text-align: left;
 		padding-top: 0;
-		
 	}
-
 	.section_content_p_right> h4 {
 		margin-top: 0;
 		margin-bottom: 0;
